--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 /* src/tailwind.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.App {
-  background-color: #000;
+*{
+  font-family: "Inter", serif;
+  font-display: swap
+}
+
+/* Styling for all <a> tags */
+a {
+  text-decoration: none!important;
 }
 
 footer {
